[package]
name = "stm32-blink-led-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-stm32 = { version = "0.1.0", features = ["memory-x", "stm32h743zi", "time-driver-any", "exti", "unstable-pac"] }
embassy-time = { version = "0.3.0", features = ["tick-hz-32_768"] }
panic-probe = "0.3.1"

